--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
   
   flask_app: 
     build:
-      context: ./app
+      context: ./app/src
     container_name: flask_app
     ports:
       - "5000:5000"
@@ -33,6 +33,8 @@ services:
       - ./app:/usr/src/app
     networks:
       - my_network
+    environment:
+      - FLASK_APP=src.main
     depends_on:
       - sqlserver
       - mongodb
