--- a/app/src/Dockerfile
+++ b/app/src/Dockerfile
@@ -1,6 +1,8 @@
 FROM python:3.13.1-slim
 WORKDIR /usr/src/app
+RUN apt-get update && apt-get install -y curl
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-COPY . .
-CMD ["flask", "run"]
+COPY . .  
+CMD ["flask", "run", "--host=0.0.0.0"]
+
