--- a/MongoData/Dockerfile
+++ b/MongoData/Dockerfile
@@ -3,6 +3,7 @@ FROM mongo:latest
 WORKDIR /data
  
 COPY feedback.json /data/feedback.json
+COPY eventos.json /data/eventos.json
  
 COPY init-mongo.sh /docker-entrypoint-initdb.d/init-mongo.sh
  
