--- a/app/src/Dockerfile
+++ b/app/src/Dockerfile
@@ -4,5 +4,5 @@ RUN apt-get update && apt-get install -y curl
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .  
-CMD ["flask","--debug", "run", "--host=0.0.0.0"]
+CMD ["flask", "run", "--host=0.0.0.0"]
 
