--- a/docker-compose-post.yml
+++ b/docker-compose-post.yml
@@ -14,6 +14,20 @@ services:
       - my_network
     environment:
       - FLASK_APP=src.main
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    container_name: frontend
+    depends_on:
+      - flask_app
+    networks:
+      - my_network
+    extra_hosts:
+    - "flask_app:host-gateway"
 networks:
   my_network:
     driver: bridge
