--- a/docker-compose-post.yml
+++ b/docker-compose-post.yml
@@ -16,20 +16,78 @@ services:
     environment:
       - FLASK_APP=src.main  # 🔹 Variable de entorno para indicar el punto de entrada de Flask
 
+  # ------------- Cluster Front End ------------------
   # 🔹 Servicio para la aplicación Frontend (Vue.js)
-  frontend:
+  frontend-1:
     build:
       context: ./frontend  # 🔹 Directorio donde se encuentra el código fuente del frontend
       dockerfile: Dockerfile  # 🔹 Especificamos el Dockerfile a utilizar
     ports:
-      - "8082:8080"  # 🔹 Expone el puerto 8080 del contenedor como 8082 en el host
-    container_name: frontend  # 🔹 Nombre personalizado para el contenedor
+      - "7001:8080"  # 🔹 Expone el puerto 8080 del contenedor como 8082 en el host
+    container_name: frontend-1  # 🔹 Nombre personalizado para el contenedor
     depends_on:
       - flask_app  # 🔹 Asegura que el backend se inicie antes que el frontend
     networks:
       - my_network  # 🔹 Conecta el servicio a la misma red del backend
     extra_hosts:
       - "flask_app:host-gateway"  # 🔹 Permite al contenedor frontend comunicarse con flask_app
+  frontend-2:
+    build:
+      context: ./frontend  # 🔹 Directorio donde se encuentra el código fuente del frontend
+      dockerfile: Dockerfile  # 🔹 Especificamos el Dockerfile a utilizar
+    ports:
+      - "7002:8080"  # 🔹 Expone el puerto 8080 del contenedor como 8082 en el host
+    container_name: frontend-2  # 🔹 Nombre personalizado para el contenedor
+    depends_on:
+      - flask_app  # 🔹 Asegura que el backend se inicie antes que el frontend
+    networks:
+      - my_network  # 🔹 Conecta el servicio a la misma red del backend
+    extra_hosts:
+      - "flask_app:host-gateway"  # 🔹 Permite al contenedor frontend comunicarse con flask_app
+  frontend-3:
+    build:
+      context: ./frontend  # 🔹 Directorio donde se encuentra el código fuente del frontend
+      dockerfile: Dockerfile  # 🔹 Especificamos el Dockerfile a utilizar
+    ports:
+      - "7003:8080"  # 🔹 Expone el puerto 8080 del contenedor como 8082 en el host
+    container_name: frontend-3  # 🔹 Nombre personalizado para el contenedor
+    depends_on:
+      - flask_app  # 🔹 Asegura que el backend se inicie antes que el frontend
+    networks:
+      - my_network  # 🔹 Conecta el servicio a la misma red del backend
+    extra_hosts:
+      - "flask_app:host-gateway"  # 🔹 Permite al contenedor frontend comunicarse con flask_app
+  frontend-4:
+    build:
+      context: ./frontend  # 🔹 Directorio donde se encuentra el código fuente del frontend
+      dockerfile: Dockerfile  # 🔹 Especificamos el Dockerfile a utilizar
+    ports:
+      - "7004:8080"  # 🔹 Expone el puerto 8080 del contenedor como 8082 en el host
+    container_name: frontend-4  # 🔹 Nombre personalizado para el contenedor
+    depends_on:
+      - flask_app  # 🔹 Asegura que el backend se inicie antes que el frontend
+    networks:
+      - my_network  # 🔹 Conecta el servicio a la misma red del backend
+    extra_hosts:
+      - "flask_app:host-gateway"  # 🔹 Permite al contenedor frontend comunicarse con fºlask_app
+
+  # --------- LOAD BALANCER ------------
+  nginx:
+    image: nginx
+    volumes:
+      - ./load-balancer/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./load-balancer/nginx.conf:/etc/nginx/nginx.conf:ro
+    command: [nginx-debug, '-g', 'daemon off;']
+    ports:
+      - "7000:8080"
+      - "7890:7890"
+    depends_on:
+      - frontend-1
+      - frontend-2
+      - frontend-3
+      - frontend-4
+    networks:
+      - my_network
 
 # 🔹 Configuración de la red para que los contenedores se comuniquen
 networks:
