fix: :bug: Arreglado bug de actualizacion de pagina

--- a/load-balancer/default.conf
+++ b/load-balancer/default.conf
@@ -29,6 +29,7 @@ server {
     }
 
     location / {
+        root /app;
         proxy_pass http://frontend_cluster_round_robin;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
